PROD-9370 - Cover image cropper UI correction

--- a/src/js/admin/settings/styles/scss/screens/features/_groups.scss
+++ b/src/js/admin/settings/styles/scss/screens/features/_groups.scss
@@ -551,7 +551,7 @@
 		justify-content: flex-end;
 		align-items: center;
 		gap: 8px;
-		padding: 8px 24px;
+		padding: 16px 24px;
 		border-top: 1px solid $bb-border-secondary-color;
 		flex: none;
 
